# astral-ocean-examples

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  astral-ocean-examples.sln.licenseheader
assets/shaders/frustum-culling/: shader.comp  shader.vert
assets/shaders/frustum-culling-optimize/: shader.comp
assets/shaders/frustum-culling-setup/: shader.comp
assets/shaders/instancing/: shader.vert
assets/shaders/light-cube/: shader.frag  shader.vert
assets/shaders/mimap/: shader.frag
assets/shaders/model/: shader.frag  shader.vert
assets/shaders/phong-lighting/: shader.frag  shader.vert
assets/shaders/rectangle/: shader.vert
assets/shaders/texture-array/: shader.frag  shader.vert
assets/shaders/textured-rectangle/: text-shader.frag  text-shader.vert
assets/shaders/triangle/: shader.vert
src/: CMakeLists.txt
src/depth-rectangle/: CMakeLists.txt  depth-rectangle.cpp  depth-rectangle.h  main.cpp
src/frustum-culling/: CMakeLists.txt  frustum_culling.cpp  frustum_culling.h  main.cpp
src/instancing/: CMakeLists.txt  instancing.cpp  instancing.h  main.cpp
src/mipmap/: CMakeLists.txt  main.cpp  mipmap.cpp  mipmap.h
src/model/: CMakeLists.txt  main.cpp  model.cpp  model.h
src/n-rectangle/: CMakeLists.txt  main.cpp  n-rectangle.cpp  n-rectangle.h  n-rectangles.cpp  n-rectangles.h
src/n-rectangles/: CMakeLists.txt  main.cpp  n-rectangles.cpp  n-rectangles.h
src/phong-lighting/: CMakeLists.txt  main.cpp  phong_lighting.cpp  phong_lighting.h
src/rectangle/: CMakeLists.txt  main.cpp  rectangle.cpp  rectangle.h
src/shared/: CMakeLists.txt  glfw_engine.cpp  glfw_engine.h  ubo.hpp  vertex.hpp
src/shared/command_buffer/: command_buffer.hpp  graphics_primary_command_buffer.h  primary_command_buffer.h  secondary_command_buffer.h
src/shared/metrics/: counter_metric.hpp  duration_metric.hpp  lambda_metric.h  metric.h  metric_module.cpp  metric_module.h
src/shared/resources/windows/: resource.h  shared.rc
src/shared/scheduler/: task_scheduler.cpp  task_scheduler.h
src/shared/utilities/: glfw.h
src/texture-array/: CMakeLists.txt  main.cpp  texture_array.cpp  texture_array.h
src/textured-rectangle/: CMakeLists.txt  main.cpp  textured_rectangle.cpp  textured_rectangle.h
src/triangle/: CMakeLists.txt  main.cpp  triangle.cpp  triangle.h
submodules/objparser/: CMakeLists.txt  objparser.cpp  objparser.h
tools/: format.sh  git-sync-master.sh  package-assets.sh  update-ao-lib.sh
